--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 * {
   box-sizing: border-box;
   font-family: "Poppins-regular", sans-serif;
+  /* For Debugging */
+  /* outline: solid 1px red;  Debugging */
 }
 
 body,
@@ -9,7 +11,6 @@ html {
   padding: 0;
   height: 100%;
   min-width: 100%;
-  overflow: hidden;
 }
 
 #root {
